--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -6,14 +6,12 @@
 
 .section-unisquare {
 	position: fixed;
-	margin: 0 10px 0 0 !important;
-	padding: 10px !important;
-	width: 300px !important;
-	height: 300px !important;
+	padding: 16px;
+	width: 300px;
+/*	height: 300px !important;*/
 	border: 2px solid #fff;
-	background: none #c6c6c6;
+	background: #c6c6c6;
 	box-shadow: 0px 5px 5px -5px #ccc;
-
 	background-image: -webkit-radial-gradient(center center, circle contain, rgba(255,255,255,0.7) 30%, rgba(255,255,255,0.1) 100%); /* WebKit */
 	background-image: -moz-radial-gradient(center center, circle contain, rgba(255,255,255,0.7) 30%, rgba(255,255,255,0.1) 100%); /* Firefox */
 	background-image: -ms-radial-gradient(center center, circle contain, rgba(255,255,255,0.7) 30%, rgba(255,255,255,0.1) 100%); /* IE10+ */
@@ -186,26 +184,26 @@ textarea#rename {
 .frontpage-link {
 	color: #fff;
 }
-.frontpage-link p {
+.frontpage-link span {
 	float: left;
-	padding-left: 5px;
-	margin-top: 0;
+	margin-right: 5px;
 }
 .frontpage-link:hover .arrow-left {
-	border-right: 6px solid #666;
+	border-right: 5px solid #666;
 }
 .arrow-left {
 	float: left;
 	width: 0;
 	height: 0;
 	margin-top: 2px;
-	border-top: 6px solid transparent;
-	border-bottom: 6px solid transparent;
-	border-right: 6px solid #fff;
+	border-top: 5px solid transparent;
+	border-bottom: 5px solid transparent;
+	border-right: 5px solid #fff;
 }
 .logo-box {
 	text-align: center;
 	padding-top: 70px;
+	height: 276px;
 }
 .logo {
 	width: 30%;
@@ -215,12 +213,12 @@ textarea#rename {
 	color:#999;
 }
 .uni-bottom-box {
-	height: 60px;
-	background-color: #fff;
 	position: absolute;
 	left: 0;
-	width: 100%;
 	bottom: 0;
+	width: 100%;
+	background-color: #fff;
+	padding: 10px;
 }
 .user-box {
 	padding: 6px;
@@ -269,12 +267,8 @@ textarea#rename {
 	padding-left: 15px;
 }
 hr {
-	width: 92%;
-	border: 0; border-top: 1px solid #fff265;
-}
-.user-settings-options {
-	font-size: 90%;
-	padding-left: 10px;
+	border: 0;
+	border-top: 1px solid #fff265;
 }
 .user-settings-options .user-email input {
 	width: auto;
@@ -304,11 +298,12 @@ hr {
 	padding-top: 5px;
 	padding-left: 5px;
 }
-.edit-password form .button {
+/*.edit-password form .button {
 	margin-left: 7px;
-}
+}*/
 .edit-password input {
-	margin-bottom: 5px;
+	margin: 0 0 5px;
+	width: 100%;
 }
 .edit-newsletter {
 	padding-top: 5px;
