--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -85,6 +85,9 @@
 	-moz-transform-style: preserve-3d;
 	transform-style: preserve-3d;
 }
+.menu-tab.feedback{
+	background: #c6c6c6;
+}
 .menu-tab img {
 	position: relative;
 	top: 50%;
