--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -135,12 +135,19 @@
 	min-height: 90px;
 	height: auto;
 	z-index: 15;
+	width: 85px;
+	margin: 0 0 0 -6px;
+	border: 5px solid #000;
+	border-top: 0;
 }
 .project-link.show-more {
 	top: inherit;
 	bottom: 18px;
 	height: 28px;
 	background: #fff;
+}
+.archived .project-link.show-more {
+	background: #ccc;
 }
 
 .filter-sort, .filter-search {
