minor corrections to make it look like the talk on blog

--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -314,8 +314,9 @@ hr {
 	top:0;
 	right:0;
 	background:#c6c6c6;
+	font-size: 18px;
 	color: #fff;
 	cursor: pointer;
-	padding: 10px 15px;
+	padding: 11.5px 20px 11.5px 20px;
 	text-align: center;
 }
