--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -308,16 +308,19 @@
 .projectDocument-archived {
 	opacity: 0.5;
 }
-textarea.renameProjectDocument, textarea.renameStyleset, textarea.renameStyle {
+input.renameProjectDocument, textarea.renameStyleset, textarea.renameStyle {
 	width: 100%;
-	height: 64px;
+	
 	border: 1px solid #ffff99;
 	padding: 5px;
 	resize: none;
 	outline: none;
 	overflow: hidden;
 }
-
+input.renameProjectDocument{
+	height: 60px !important;
+	margin-top:30px;
+}
 .animate-enter, .animate-leave {
 	-webkit-transition: all 0.5s ease-in-out;
 	-moz-transition: all 0.5s ease-in-out;
@@ -667,4 +670,29 @@ li.typo .style-copy-options p {
 #anchorInputBox{
 	border: none;
 	background: #fff;
+}
+.documentTitleEdit .ng-invalid{
+	border-color: red !important;
+	border-width: 2px !important;
+	border-color: black;
+}
+input.documentTitleEdit .ng-invalid::after{
+	 content: " Required!";
+	 background-color: red;
+	 position: absolute;
+	 left: 0;
+	 right:0;
+	 width: 50px;
+	 height: 50px;
+
+}
+.nameError{
+	background-color: red;
+	width: 150px;
+	height: 20px;
+	color: #000;
+	z-index: 5115;
+	position: absolute; 
+	right: 0;
+
 }
