changing text and background colour

--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -516,9 +516,9 @@ li.typo .style-copy-options p {
 	padding: 5px 0;
 }
 .menu-box.label.desc {
-	background: #ccc;
+	background: #efefef;
 	padding: 10px;
-	color: #000;
+	color: #999;
 }
 
 .menu-box.inputfield {
