--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -319,3 +319,35 @@ hr {
 	padding: 10px 15px;
 	text-align: center;
 }
+.projectTitleEditing .ng-invalid{
+	border-color: red !important;
+	border-width: 2px !important;
+	border-color: black;
+}
+.nameError::after{
+	content:'';
+	width: 0; 
+	height: 0; 
+	position: absolute; 
+	left: 0;
+	top:-10px;
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	border-bottom: 10px solid red;
+}
+.nameError{
+	background-color: red;
+	width: 100%; 
+	text-align: center;
+	font-size: 0.7em;
+	padding:3px;
+	color: #000;
+	z-index: 5101;
+	display:block;
+	position: absolute; 
+	top:110px;
+	left: 0;
+	overflow: visible;
+	overflow-y:visible;
+
+}
