--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,10 @@
   src: url('../fonts/Roboto/Roboto-Regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 @font-face {
+  font-family: 'Roboto-Black';
+  src: url('../fonts/Roboto/Roboto-Black.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}
+@font-face {
 	font-family: 'icomoon';
 	src:url('../fonts/icomoon.eot?-ryeo5j');
 	src:url('../fonts/icomoon.eot?#iefix-ryeo5j') format('embedded-opentype'),
@@ -75,28 +79,59 @@ body {
 	overflow-x: hidden;
 	font-family: 'Roboto', 'Helvetica', 'Arial';
 }
+p{
+	font-size:14px;
+}
 .page{
 	margin:0;
 	padding-top: 50px;
 	width:100vw;
-	height:98vh;
+	height:100vh;
 	overflow-x: hidden;
 }
 nav {
 	background-color:#FFF;
 	color:#000;
-	padding-left: 30vw;
+	padding-left: 35vw;
 	box-shadow: 0 8px 50px -6px rgba(255,245,108,0.5);
 } 
+.about-scripler{
+	color:#000;
+	font-weight: 700;
+}
+#scriplerTeam{
+	padding-bottom: 20px;
+	padding-top: 20px;
+}
 a.navbar-brand{
-	font-size: 1.5em; 
+	font-size: 1.2em; 
 
 }
 #brandlogo{
 	display:none;
 }
+#forgot-password{
+	float:left;
+	color: #000;
+	text-decoration: underline;
+	font-size: 1.1em;
+}
+
+#remember-me-box{
+	clear: both;
+
+}
+#remember-me-box>label{
+	margin-left: 4px;
+	float: left;
+	font-size:1.2em;
+	font-weight: 400;
+}
+#remember{
+	float: left
+}
 .collapsed{
-	background-color:#fff56c; 
+	background-color:#FFF; 
 	color:#000!important;
 	border-style:solid;
 	border-color: #000;
@@ -127,19 +162,22 @@ a.navbar-brand{
 	color:#000;
 }  
 .navbar-brand:hover{
-	 color:#000;
+	color:#000;
 }
 ul.navList li>a:hover{
 	background-color: #fff;
 	color:#666;
 } 
 @media (min-width:850px){
+	body{
+		padding-top: 20px;
+	}
 	.menu-blog{
-	background-color:#000;
+		background-color:#000;
 	} 
 
 	#login-form {
-		margin-left: 100px;
+		margin-left: 150px;
 		margin-top: 10px;
 	}
 	li>a.blog-link{
@@ -149,8 +187,8 @@ ul.navList li>a:hover{
 		right:0;
 		text-decoration: none;
 		background-color: #000;
-		width:70px;
-		height: 52px;
+		width:79px;
+		height: 50px;
 	}     
 	li>a.blog-link:hover{
 		background-color: #000 !important;
@@ -159,26 +197,29 @@ ul.navList li>a:hover{
 	.menu-talk{
 		background-color:#000;
 	} 
+	.navpoint{
+		text-align: center;
+	}
 	a.navpoint.talk-link:hover{
-		background-color: #666 !important;
-		color:#FFF !important;
+		background-color: #ccc !important;
+		color:#fff56c !important;
 	}
 	li>a.talk-link{
 		font-size: 1.2em;
-		color: #333 !important;
+		color: #FFF !important;
 		position:fixed;
 		right:70px;
 		text-decoration: none;
-		background-color: #ececec;
-		width:70px;
-		height: 52px;
+		background-color: #ccc;
+		width:79px;
+		height: 50px;
 	}     
 	li>a.talk-link:hover{
 		background-color: #fff !important;
 	}
 	.socialicons {
 		margin-top: 15px;
-		margin-left: -35px;
+		margin-left:-110px;
 	}
 }
 
@@ -193,19 +234,25 @@ ul.navList li>a:hover{
 #about{
 	background-color:#fff56c;
 }
+h2.about{
+	padding-bottom: 0 !important
+}
 #contact{
 
+}
+h4{
+	font-size: 16px;
 }
 h3{
 	font-size:1.2em;
 	font-weight: 700;
 }
-h2{
-	font-weight: 700;
-	padding-bottom: 30px;
+h2{  
+	font-family: 'Roboto-Black';
+	padding-bottom: 20px;
 }
-#makeGreat{
-	
+img#scriplerLogo{
+	margin-bottom: 50px;
 }
 button#testTheAlpha{
 	background-color:#fff56c;
@@ -248,7 +295,7 @@ a.person{
 	font-weight: 700;
 }
 .pers {
-	min-height: 15vh;
+	height: 12vh;
 }
 #contact{ 
 	color: #666;
@@ -283,9 +330,13 @@ iframe{
 h2.con{
 	font-weight: 700;
 	padding:0;
+	padding-top: 20px;
 	margin:0;
 }
-
+h2.feat{
+	color: #fff56c;
+	padding-bottom: 20px !important;
+}
 
 #login
 {
@@ -294,7 +345,9 @@ h2.con{
 	background-color: #c6c6c6;
 }
  
-
+.row {
+	margin:0;
+}
 .email, .password {
 	-moz-border-radius: 1px;
 	-webkit-border-radius: 1px;
@@ -343,12 +396,63 @@ h2.con{
 #remember-me-box{
 	margin-bottom: 5px;
 }
+.pull-right-on-big-screen{
+	float:right;
+	height: 100%;
+}
+.features{
+	height: 25vh; 
+}
+
 @media (max-width:850px){ 
+
+	.navbar-toggle {
+		position: fixed;
+		top:-2px;
+		right:-5px;
+		z-index: 50;
+		border: solid;
+		border-width: 1px;
+		border-color: #000;
+		background-color: #FFF;
+	}
+	#navbar{
+		position: fixed;
+		top:42px; 
+		right: 30px;
+		background-color: #FFF;
+	}
+	#login{
+		display: none;
+		min-height: 100vh;
+	}
+	#login-form{
+		margin-top: 20vh;
+	}
+	.features{
+	height: 100%;
+	}
+	.features:last-child{
+		margin-bottom: 15px;
+	}
+	.pull-right-on-big-screen{
+		float: left;
+		height: 100%;
+	}
 	a.navbar-brand{
 	font-size: 2em;
 	font-weight: 700;
+	}
+	a#forgot-password{
+		font-size: 1.5em;
+	}
+	#remember-me-box>label{
+		font-size: 1.5em;
+	}
+	nav {
 
-}
+		margin-bottom: 0 !important;
+	}
 	.navbar {
 		position: relative;
 		display: block;
@@ -363,14 +467,18 @@ h2.con{
 		position:relative;
 		height:100%;
 		padding-bottom: 20px;
+		padding-top: 20px;
 		}
 	iframe{
 			position:relative;
 			}
 	#scripler, #features, #about, #contact, #login{
+		padding-top: 20px;
 		height:100%;
+		padding-bottom: 50px;
 		}
 	form.login-form{
 		margin:0;
 	}
+
 }
