--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -85,9 +85,6 @@
 	-moz-transform-style: preserve-3d;
 	transform-style: preserve-3d;
 }
-.menu-tab.feedback{
-	background: #c6c6c6;
-}
 .menu-tab img {
 	position: relative;
 	top: 50%;
@@ -175,6 +172,30 @@
 }
 .editor.menu-extended {
 	width: calc(100% - 640px);	
+}
+.editor.information .breadcrumb {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	float: left;
+}
+.editor.information .breadcrumb a {
+	color: #666;
+	text-decoration: underline;
+}
+.editor.information .savedstamp {
+	margin-top: 10px;
+	margin-bottom: 0.5em;
+	float: right;
+	text-align: right;
+}
+.editor.information .feedback {
+	position: absolute;
+	top: 33px;
+	right: 15px;
+	text-align: right;
+	z-index: 10;
+	cursor: pointer;
+	text-decoration: underline;
 }
 
 #cke_bodyeditor, .cke_inner, .cke_wysiwyg_frame {
