--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -204,23 +204,12 @@
 }
 /* This should with time be fixed in the menubar plugin or how it works in ckeditor, a lot of styles are set on the elements */
 .cke_toolbox {
-	margin: 0 auto !important;
-	width: 225px !important;
-	padding: 2px 0 0 !important;
-	background: none !important;
+	margin: 0 0 0 -5px !important;
+	width: calc(100% - 100px) !important;
+	padding-left: 0 !important;
 }
 .cke_toolgroup {
 	margin: 0 2px 4px !important;
-}
-@media all and (min-width: 640px) {
-	.cke_toolbox {
-		width: 100% !important;
-	}
-}
-@media all and (min-width: 1120px) {
-	.cke_toolbox {
-		width: 520px !important;
-	}
 }
 
 .menu-left ul li div .document {
