--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -560,6 +560,13 @@ li.typo .style-copy-options p {
 	-webkit-transition: all 1s;
 	-o-transition: all 1s;
 }
+.menu-box.inputfield.no-animation {
+	transition: none 0s;
+	-moz-transition: none 0s;
+	-ms-transition: none 0s;
+	-webkit-transition: none 0s;
+	-o-transition: none 0s;
+}
 .menu-box.inputfield.textfield {
 	height: 64px;
 }
