hover effect on the unpublish button was black, it is now yellow to make it visible that you are hovering

--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -82,6 +82,9 @@ button label, .button label {
 button:hover, .button:hover {
 	border: 1px solid #000;
 }
+button.revert:hover, .button.revert:hover {
+	border: 1px solid #fff56c;
+}
 button:active, .button:active {
 	border: 1px solid #fefefe;
 }
