--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -120,9 +120,11 @@ a {
 	color: #000;
 	text-decoration: none;
 }
-
 a:hover {
 	color: #666;
+}
+a.link-underline {
+	text-decoration: underline;
 }
 
 .font-small {
