--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -6,7 +6,7 @@
 
 .section-unisquare {
 	position: fixed;
-	padding: 16px;
+	padding: 16px 16px 0px 16px;
 	width: 300px;
 /*	height: 300px !important;*/
 	border: 2px solid #fff;
@@ -239,8 +239,11 @@ textarea#rename {
 .upgrade-bottom-box {
 	position: relative;
 	border-top: 2px solid #fff;
-	padding: 10px 0 0;
+	padding: 10px 0 10px;
 	margin: 0 -16px;
+}
+.upgrade-bottom-box-premium {
+	background: #F2D32C;
 }
 .user-box {
 	padding: 6px;
@@ -353,7 +356,13 @@ hr {
 	padding: 0 5px;
 }
 .upgrade-text a {
-	color: #fff;
 	text-decoration: underline;
 	padding: 0 5px;
+	color: #fff;
+}
+.upgrade-text-free {
+	color: #000;
+}
+.upgrade-text-premium {
+	color: #fff;
 }
