added client-side validation on target input field

--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -771,5 +771,9 @@ li.typo .style-copy-options p {
 	left: 0;
 	overflow: visible;
 	overflow-y:visible;
+}
 
+.urlError{
+	margin-left:10px;
+	width: 90%;
 }
