Re-writing a lot, it was not done the bootstrap way, it is more or less now, so less code, more organised and looks better

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,11 +43,9 @@
 .icon-linkedin:before {
 	content: "\e603";
 }
+
 .socialicons {
 	text-align: center;
-}
-.btn {
-	padding:0;
 }
 .socialicon a, a.socialicon {
 	margin: 0 auto; 
@@ -74,20 +72,10 @@ body {
 p {
 	font-size:14px;
 }
-.page {
-	margin: 0;
-	padding: 50px 0;
-}
 nav {
-	background-color:#FFF;
-	color:#000;
+	background-color: #fff;
+	color: #000;
 	box-shadow: 0 8px 50px -6px rgba(255,245,108,0.5);
-} 
- 
-.about-scripler{
-	color:#000;
-	font-weight: 700;
-	padding: 20px 0;
 }
 
 #forgot-password{
@@ -152,9 +140,6 @@ ul.navList li>a:hover{
 }
 
 @media (min-width:850px){
-	body{
-		padding-top: 20px;
-	}
 	.menu-blog{
 		background-color:#000;
 	} 
@@ -202,38 +187,29 @@ ul.navList li>a:hover{
 
 }
 
-#scripler{
-	color: #666;
-	padding-top: 80px;
-	background-color:#ececec;
+#scripler, #features, #about {
+	padding: 50px 20px 100px;
+	background-image: -webkit-radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%); /* WebKit */
+	background-image: -moz-radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%); /* Firefox */
+	background-image: -ms-radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%); /* IE10+ */
+	background-image: -o-radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%); /* Opera */
+	background-image: radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%);
 }
-#features{
-	background-color:#215660;
-}
-#about{
-	background-color:#fff56c;
-}
-h2.about{
-	padding-bottom: 0 !important
-}
-#contact{
 
+@media (max-width:540px) {
+	#scripler, #features, #about {
+		padding: 20px 20px 40px;
+	}
 }
-h4{
-	font-size: 16px;
+
+#scripler {
+	background-color: #ececec;
+	color: #666;
 }
-h3{
-	font-size:1.2em;
-	font-weight: 700;
+#scripler .scripler-logo {
+	margin: 0 auto 50px;
 }
-h2{  
-	font-family: 'Roboto-Black';
-	padding-bottom: 20px;
-}
-.scripler-logo{
-	margin-bottom: 50px;
-}
-button.test-alpha {
+#scripler .test-alpha {
 	background-color: #fff56c;
 	color: #000;
 	font-size: 1.5em;
@@ -242,46 +218,65 @@ button.test-alpha {
 	margin: 20px;
 	padding: 10px 25px;
 }
- 
+
+#features {
+	background-color: #215660;
+}
+#features h2, #features h3 {
+	color: #fff56c;
+}
+#features p {
+	color: #fff;
+}
+
+#about {
+	background-color: #fff56c;
+	color: #666;
+}
+#about h2, #about h4.text-color-black {
+	color: #000;
+}
+#about a {
+	color: #000;
+}
+
+#contact{ 
+	background-color: #fff;
+	color: #666;
+}
+#contact a {
+	color: #000;
+}
+#contact .left-column {
+	position: absolute;
+	left: 0;
+	background-color: #fff;
+	height: 100%;
+	min-height: 100vh;
+	padding: 50px 20px 100px;
+	z-index: 5;
+}
+#contact .left-column .row p {
+	margin: 0;
+}
+#contact iframe {
+	width: 100%;
+	height: 100%;
+	min-height: 100vh;
+	overflow: hidden;
+}
+
+@media (max-width:540px) {
+	#contact .left-column {
+		padding: 20px 20px 40px;
+	}
+}
+
 a#signUp{
 	color:#000;
 	text-decoration: underline;
 }
-.bbb{
-	background-color:#000;
-}
-.feats{
-	color: #fff56c;
-}
-.features{
-	display:block;
-}
-.whiteFeats{
-	color:#FFF;
-}
-#about{
-	color: #666;
-}
-a.person{
-	color:#000;
-	text-decoration:underline;
-	font-weight: 700;
-}
-.pers {
-	height: 12vh;
-}
-#contact{ 
-	color: #666;
-	padding-top: 0;
-}
-.cont{
-	padding-top: 50px;
-	height:100vh;
-	background-color:#fff;
-	position:absolute;	
-	display:block;
-	z-index: 5;
-}
+
 input#mce-EMAIL,input#mc-embedded-subscribe{
 	height: 32px;
 }
@@ -292,35 +287,11 @@ input#mc-embedded-subscribe{
 	border:none; 
 
 }
-iframe{ 
-	left:0px;
-	position:absolute;
-	z-index: 0;
-	width:99vw;
-	overflow-x: hidden;
-	height:100vh;
-}
-h2.con{
-	font-weight: 700;
-	padding:0;
-	padding-top: 20px;
-	margin:0;
-}
-h2.feat{
-	color: #fff56c;
-	padding-bottom: 20px !important;
-}
 
-#login
-{
-	width:100vw;
-	overflow-x:hidden;
+#login {
 	background-color: #c6c6c6;
 }
- 
-.row {
-	margin:0;
-}
+
 .email, .password {
 	-moz-border-radius: 1px;
 	-webkit-border-radius: 1px;
@@ -336,10 +307,11 @@ h2.feat{
 	font-family: 'Roboto', sans-serif; 
 	margin-bottom: 20px;
 }
-.loginBtn {
+.login-button {
 	-moz-border-radius: 1px;
 	-webkit-border-radius: 1px;
 	-webkit-appearance: none;
+	border: 0;
 	border-radius: 1px; 
 	background-color:#fff56c;
 	color: #231f20;
@@ -356,7 +328,6 @@ h2.feat{
 }
 .login-main{
 	float: none;
-	
 }
 #remember{
 	margin:0;
@@ -372,9 +343,6 @@ h2.feat{
 .pull-right-on-big-screen{
 	float:right;
 	height: 100%;
-}
-.features{
-	height: 25vh; 
 }
 
 .navbar-collapse {
@@ -409,16 +377,6 @@ h2.feat{
 	#login-form{
 		margin-top: 20vh;
 	}
-	.features{
-	height: 100%;
-	}
-	.features:last-child{
-		margin-bottom: 15px;
-	}
-	.pull-right-on-big-screen{
-		float: left;
-		height: 100%;
-	}
 	a.navbar-brand{
 		display: none;
 	}
@@ -436,26 +394,6 @@ h2.feat{
 		background-color: transparent!important;
 	}
 
-	#brandlogo{
-		display:inline-block;
-		margin-top:-10px;
-		margin-right:5px;
-		float:left;
-	}
-	.cont { 
-		position:relative;
-		height:100%;
-		padding-bottom: 20px;
-		padding-top: 20px;
-		}
-	iframe{
-		position:relative;
-		}
-	#scripler, #features, #about, #contact, #login{
-		padding-top: 20px;
-		height:100%;
-		padding-bottom: 50px;
-		}
 	form.login-form{
 		margin:0;
 	}
