left aligning headers and text, it looks better that way

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,11 +44,8 @@
 	content: "\e603";
 }
 
-.socialicons {
-	text-align: center;
-}
-.socialicon a, a.socialicon {
-	margin: 0 auto; 
+a.socialicon {
+	margin: 0 5px;
 	padding-top: 8px;
 	padding-bottom: 8px;
 	padding-left: 10px;
@@ -58,14 +55,14 @@
 	border-radius: 50%;
 	background-color: #fff; 
 	font-size: 22px; 
-	color:#c6c6c6;
+	color: #c6c6c6;
 	text-decoration: none;
 }
-
 .socialicon a:hover, a.socialicon:hover {
 	background-color: #fff265;
 	color: #666;
 }
+
 body {
 	font-family: 'Roboto', 'Helvetica', 'Arial';
 }
@@ -132,10 +129,6 @@ ul.navList li>a:hover{
 @media (min-width:1050px){	
 	#login-form {
 		margin-left: 150px;
-	}
-	.socialicons {
-		margin-top: 15px;
-		margin-left:-80px;
 	}
 }
 
