--- a/public/css/main.css
+++ b/public/css/main.css
@@ -202,6 +202,10 @@ ul.navList li>a:hover{
 	color:#666;
 } 
 
+.nav>li>a:hover, .nav>li>a:focus {
+    background-color: transparent;
+}
+
 a#signUp{
 	color:#000;
 	text-decoration: underline;
