--- a/public/css/main.css
+++ b/public/css/main.css
@@ -198,6 +198,7 @@ ul.navList li>a:hover{
 #scripler {
 	background-color: #ececec;
 	color: #666;
+	padding-top: 100px;
 }
 #scripler .scripler-logo {
 	margin: 0 auto 50px;
@@ -286,6 +287,8 @@ input#mc-embedded-subscribe{
 
 #login {
 	background-color: #c6c6c6;
+	display:none;
+	padding-top:70px;
 }
 
 .email, .password {
