--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -200,12 +200,12 @@
 	width: 100% !important;
 	height: 100%;
 }
-/* This should with time be fixed in the menubar plugin or how it works in ckeditor, a lot of styles are set on the elements */
+
 .cke_toolbox {
-	margin: 0 0 0 -5px !important;
-	width: calc(100% - 100px) !important;
-	padding-left: 0 !important;
+	margin: 0 0 0 -5px;
+	width: calc(100% - 100px);
 	float: left;
+	padding: 3px 0 0 0px;
 }
 .cke_toolgroup {
 	margin: 0 2px 4px !important;
