added basic modal window functionality for plan upgrade

--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -382,3 +382,83 @@ hr {
 	overflow-y:visible;
 }
 
+#upgradeButton{
+	position:relative;
+	left:150px;
+	cursor: pointer;
+	padding: 5px;
+	border:2px yellow solid;
+	background:#ccc;
+}
+
+.modalButtons{
+	cursor: pointer;
+	margin-right: 10px;
+	padding:5px;
+	background: #fff56c;
+	border:1px yellow solid;
+}
+
+.planChoice{
+	width:300px;
+	height:300px;
+	display:inline-block;
+}
+
+#freePlan{
+	background: #d6d6d6;
+	margin-right:50px;
+}
+
+#premiumPlan{
+	background: #f2d32c;
+}
+
+div.m-modals {
+	background-color: rgba( 0, 0, 0, 0.8 ) ;
+	bottom: 0px ;
+	left: 0px ;
+	position: fixed ;
+	right: 0px ;
+	top: 0px ;
+	z-index:9999;
+}
+
+div.m-modals.ng-hide {
+	background-color: rgba( 0, 0, 0, 0 );
+}
+
+div.m-modals.ng-hide-add.ng-hide-add-active,
+div.m-modals.ng-hide-remove.ng-hide-remove-active {
+	transition: 250ms ease all ;
+}
+
+div.m-modals > .modal {
+	border-radius: 3px 3px 3px 3px ;
+	box-sizing: border-box ;
+		-moz-box-sizing: border-box ;
+	padding: 20px 20px 20px 20px ;
+	position: fixed ;
+	left: 50% ;
+	margin-left: -350px ;
+	top: 200px ;
+	width: 700px;
+}
+
+div.m-modals.ng-hide > .modal.ng-enter {
+	top: -200px ;
+	transition: 250ms ease top ;
+}
+
+div.m-modals.ng-hide > .modal.ng-enter.ng-enter-active {
+	top: 200px ;
+}
+
+a.jump {
+	color: #999999 ;
+}
+
+a.jump:hover {
+	background-color: gold ;
+	color: #000000 ;
+}
