--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -395,23 +395,72 @@ hr {
 	cursor: pointer;
 	margin-right: 10px;
 	padding:5px;
+	text-align: center;
+	font-weight: bold;
+	font-size: 18px;
+}
+
+#continueFree{
+	position: absolute;
+	bottom:20px;
+	left:20px;
+	width:350px;
+	background: #fff;
+}
+
+#upgradePremium{
+	position: absolute;
+	bottom:20px;
+	right:16px;
+	width:350px;
 	background: #fff56c;
-	border:1px yellow solid;
+	color: #e98f2c;
 }
 
 .planChoice{
-	width:300px;
-	height:300px;
+	width:350px;
+	height:240px;
 	display:inline-block;
+	padding-left:25px;
+}
+
+.planChoice p{
+	font-weight: bold;
+	line-height: .7;
 }
 
 #freePlan{
 	background: #d6d6d6;
 	margin-right:50px;
+	border:4px #fff solid;
+	color: #000;
 }
 
 #premiumPlan{
 	background: #f2d32c;
+	border:4px #fff56c solid;
+	color: #e98f2c;
+}
+
+#premiumPlan h1{
+	color: #fff56c;
+}
+
+#price{
+	position: absolute;
+	right: 45px;
+	top: 35px;
+	color: #fff;
+	text-align: right;
+}
+
+#price p{
+	font-size:32px;
+}
+
+#price span{
+	font-size:12px;
+	color:#fff;
 }
 
 div.m-modals {
@@ -440,9 +489,9 @@ div.m-modals > .modal {
 	padding: 20px 20px 20px 20px ;
 	position: fixed ;
 	left: 50% ;
-	margin-left: -350px ;
-	top: 200px ;
-	width: 700px;
+	margin-left: -400px ;
+	top: 150px ;
+	width: 800px;
 }
 
 div.m-modals.ng-hide > .modal.ng-enter {
