--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -403,13 +403,8 @@ hr {
 	overflow-y:visible;
 }
 
-#upgradeButton{
-	position:relative;
-	left:150px;
+#upgradeButton, #changeButton{
 	cursor: pointer;
-	padding: 5px;
-	border:2px yellow solid;
-	background:#ccc;
 }
 
 .modalButtons{
