Implements premium styleset logic.

--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -775,3 +775,19 @@ li.typo .style-copy-options p {
 .urlError{
 	position: relative; 
 }
+
+.styleset-upgrade {
+	position: absolute;
+	top: 0;
+	right: 0;
+	background-color: #f2d32c;
+	border: 2px solid #fff56c;
+	padding: 0px 5px 0px 5px;
+	font-size: 0.8em;
+	color:  #fff56c;
+}
+
+
+a.styleset-upgrade:hover {
+	color:  #fff56c;
+}
